--- a/public/styles.css
+++ b/public/styles.css
@@ -2,36 +2,69 @@
   
   body {
     font-family: 'Indie Flower', cursive;
+    font-size: 70px;
   }
 
-  .welcome{
-    
+  .welcome {
+
+  }
+  
+  .welcome div {
+    margin: 25% 20% 5%;
+    text-align: center;
   }
 
-  div#navbar{
-    width: 100%;
-    height: 15%;
-    border-bottom: 3px solid black;
+  .welcome button {
+    height: 200px;
+    width: 200px;
+    font-size: 40px;
+    border-radius: 50%;
+    border: 2px solid black;
+    background-color: white;
+    font-family: 'Indie Flower', cursive;
   }
 
-  #main{
+  .welcome input {
+    width: 450px;
+    height: 80px;
+    font-size: 70px;
+    text-align: center;
+    margin: 30% 10% 0% 10%;
+    padding: 10px;
+    border: none;
+    border-bottom: solid 2px black;
+    font-family: 'Indie Flower', cursive;
+  }
+  
+  div#navbar {
+    width: 90%;
+  }
+
+  .nav {
     color: black;
     text-decoration: none;
     font-size: 70px;
   }
 
-  #newgame{
-    color: black;
-    text-decoration: none;
-    font-size: 30px;
-    border-right: 2px solid black;
+  .nav#main {
+  
+  }
+
+  .nav#new {
+    border: 2px solid black;
+    border-radius: 50%;
+    height: 50px;
+  }
+
+  .eachGame{
+    text-align: center;
+    margin: 8% 0%;
   }
 
   input {
     padding: 10px;
     border: none;
     border-bottom: solid 2px black;
-    transition: border 0.3s;
   }
 
   button {
