--- a/public/styles.css
+++ b/public/styles.css
@@ -18,26 +18,15 @@
     height: 200px;
     width: 200px;
     font-size: 40px;
-    border-radius: 50%;
-    border: 2px solid black;
-    background-color: white;
-    font-family: 'Indie Flower', cursive;
   }
 
   .welcome input {
-    width: 450px;
-    height: 80px;
-    font-size: 70px;
-    text-align: center;
     margin: 30% 10% 0% 10%;
     padding: 10px;
-    border: none;
-    border-bottom: solid 2px black;
-    font-family: 'Indie Flower', cursive;
   }
   
   div#navbar {
-    width: 90%;
+    width: 100%;
   }
 
   .nav {
@@ -47,29 +36,55 @@
   }
 
   .nav#main {
-  
+    font-size: 90px;
+    margin-left: 25px;
   }
 
   .nav#new {
-    border: 2px solid black;
-    border-radius: 50%;
-    height: 50px;
+    font-size: 150px;
+    margin-left: 105px;
   }
 
   .eachGame{
     text-align: center;
-    margin: 8% 0%;
+    width: 100%;
+    border-bottom: 4px solid black;
+  }
+
+  .eachGame:nth-of-type(1){
+    border-top: 4px solid black;
+  }
+
+  .newGame {
+    text-align: center;
+  }
+  
+  .newGame h3 {
+    margin-bottom: 0;
+  }
+
+  .newGame button {
+    margin-top: 140px;
+    font-size: 90px;
+    height: 250px;
+    width: 350px;
   }
 
   input {
     padding: 10px;
+    width: 450px;
+    height: 80px;
+    font-size: 70px;
+    text-align: center;
     border: none;
     border-bottom: solid 2px black;
+    font-family: 'Indie Flower', cursive;
   }
 
   button {
     border-radius: 50%;
     border: 2px solid black;
     background-color: white;
+    font-family: 'Indie Flower', cursive;
   }
 }
