makes menu component and tracks active route

--- a/assets/src/variables.less
+++ b/assets/src/variables.less
@@ -11,11 +11,13 @@
 @white: #ffffff;
 @font-family: 'Cabin', 'sans-serif'; 
 
-.round-buttons(@color: transparent, @size: 7em) {
+:global {
+  .roundButtons(@color: transparent, @size: 7em) {
   border-radius: 50%;
   height: @size;
   width: @size;
   background-color: @color;
+  }
 }
 
 
