--- a/assets/src/Menu/menuStyles.less
+++ b/assets/src/Menu/menuStyles.less
@@ -1,19 +1,23 @@
 @import '../variables.less';
 
 .menuWrap {
-  height: 100vh;
-  width: 100vw;
-  background-color: @blue;
-  font-family: @font-family;
-  font-size: 5em;
-  color: @white;
-  text-decoration: none;
+  height: 100%;
 }
 
 .menuItem {
   border-bottom: 1px solid @white;
-  font-size: 1.5em;
+  font-size: 1.25em;
   color: @white;  
   text-decoration: none;
+  text-align: center;
+  height: 50%;
+}
+
+.menuItem[title='Lobby'] {
+  background-color: @green;
+}
+
+.menuItem[title='New Game'] {
+  background-color: @orange;
 }
 
