--- a/assets/src/App/styles.less
+++ b/assets/src/App/styles.less
@@ -1,4 +1,4 @@
-@import '../variables.less';
+@import '../global.less';
 
 .appWrap {
   height: 100vh;
@@ -7,17 +7,23 @@
   font-family: @font-family;
   font-size: 5em;
   color: @white;
+  overflow: hidden;
   
   .header {
     border-bottom: .05em solid @white;
     font-size: 1.5em;
     display: flex;
     justify-content: space-between;
+    height: 10vh;
 
     > div {
       margin: 0 20px;
     }
+  }
 
+  .appContent {
+    margin: 0 30px;
+    height: 90vh;
   }
 } 
 
