--- a/assets/src/Menu/styles.less
+++ b/assets/src/Menu/styles.less
@@ -12,6 +12,9 @@
     text-decoration: none;
     text-align: center;
     min-height: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
 
   .menuItem[title='Lobby'] {
