creates game comps and enters from lobby

--- a/assets/src/Lobby/styles.less
+++ b/assets/src/Lobby/styles.less
@@ -7,6 +7,10 @@
   
   .halfPage:first-child {
     border-right: 5px solid @white;
+    
+    .gamesRender {
+      flex-direction: column-reverse !important; 
+    }
   }
 
   .halfPage {
@@ -26,7 +30,7 @@
         align-items: center;
         justify-content: center;
       }
-    }   
+    }
   }
 
   .game {
