styles game answer view

--- a/assets/src/global.less
+++ b/assets/src/global.less
@@ -19,6 +19,8 @@
   background-color: @color;
   text-align: center;
   line-height: @size;
+  color: @white;
+  font-size: 1em;
 }
 
 .input(@color: @green) {
