--- a/assets/src/Game/Guess/styles.less
+++ b/assets/src/Game/Guess/styles.less
@@ -52,6 +52,7 @@
     .questionCard {
       flex: 1;
       min-width: 90%;
+      max-width: 90%;
       background-color: @red;
       border-radius: 15px;
       margin-right: .5em;
