improves user login/create and connects user models to games

--- a/assets/src/NewGame/styles.less
+++ b/assets/src/NewGame/styles.less
@@ -18,6 +18,13 @@
       margin: 50px;
     }
 
+    select {
+      width: 90%;
+      height: 10em;
+      background-color: white;
+      margin-bottom: 5em;
+    }
+
     button {
       .roundedButton(@orange, @white, 85%);
     }
