adds opponent dropdown select when creating new games

--- a/assets/src/NewGame/styles.less
+++ b/assets/src/NewGame/styles.less
@@ -8,14 +8,15 @@
     align-items: center;
     margin: 1em 0;
 
-    > h3 {
+    > label {
+      font-size: 1em;
       align-self: flex-start;
     }
 
-    input {
-      width: 100%;
+    input[name=animalInput] {
       .input(@green);
       margin: 50px;
+      width: 100%;
     }
 
     select {
