--- a/assets/src/NewGame/styles.less
+++ b/assets/src/NewGame/styles.less
@@ -15,15 +15,26 @@
 
     input[name=animalInput] {
       .input(@green);
+      text-align: left;
+      text-indent: 25%;
       margin: 50px;
-      width: 100%;
+      width: 95%;
     }
 
     select {
-      width: 90%;
-      height: 10em;
+      width: 95%;
+      height: auto;
       background-color: white;
-      margin-bottom: 5em;
+      margin: 50px 0 1em;
+      background-color: @blue;
+      font-size: 1em;
+      color: @white;
+      appearance: none;
+      background: url(http://globaltowers.plural.media/wp-content/uploads/sites/43/2017/02/arrodown.png) no-repeat 100% 50%;
+      background-size: 1em;
+      border-top: 8px solid @green;
+      border-bottom: 8px solid @green;
+      padding: 15px 0 15px 25%;
     }
 
     button {
