handles game over and correct guess

--- a/assets/src/Game/Answer/styles.less
+++ b/assets/src/Game/Answer/styles.less
@@ -6,7 +6,7 @@
   align-items: center;
   justify-content: center;
   
-  .countBanner {
+  > :first-child {
     background-color: @yellow;
     border-radius: 0 25px 25px 0;
     align-self: flex-start;
