prepare for heroku deploy

--- a/assets/src/Menu/styles.less
+++ b/assets/src/Menu/styles.less
@@ -29,7 +29,21 @@
 
 
 
-.menuIcon img {
-  height: 100px;
-  width: auto;
+.menuIcon {
+  display: flex;
+  align-items: center;
+  height: 100%;
+
+  a {
+  display: flex;
+  flex-direction: column;
+  height: 70%;
+  justify-content: space-around;
+
+    div {
+      width: 140px;
+      height: 15px;
+      background-color: white;
+    }
+  }
 }
