--- a/assets/src/App/styles.less
+++ b/assets/src/App/styles.less
@@ -14,7 +14,7 @@
     font-size: 1.5em;
     display: flex;
     justify-content: space-between;
-    height: 10vh;
+    min-height: 10vh;
 
     > div {
       margin: 0 20px;
@@ -28,8 +28,8 @@
 } 
 
 .loginView {
-  height: 100vh;
-  width: 100vw;
+  height: 100%;
+  width: 100%;
   background-color: @green;
   display: flex;
   flex-direction: column;
@@ -38,7 +38,7 @@
   
   h1 {
     flex: 1;
-    width: 90vw;
+    width: 90%;
     font-size: 15em;
     color: @yellow;
     font-family: cursive;
@@ -48,7 +48,7 @@
   }
 
   form {
-    width: 90vw;
+    width: 90%;
     flex: 1;
     display: flex;
     flex-direction: column;
@@ -70,6 +70,7 @@
 
     button {
       .roundedButton(@orange, @white, 80%, 3.5em);
+      min-height: 3.5em;
     }
   }
 
