--- a/assets/src/Game/Answer/styles.less
+++ b/assets/src/Game/Answer/styles.less
@@ -41,10 +41,13 @@
 
     button {
       .circleButton(@red, 5em);
+      border: 4px solid @red;
+
     }
     
     button:first-child {
       background-color: @green;
+      border: 4px solid @green;
       margin-right: .5em;
     }
   }
