--- a/assets/src/Lobby/styles.less
+++ b/assets/src/Lobby/styles.less
@@ -40,17 +40,33 @@
   
   .game:nth-child(4n) {
     background-color: @orange;
+    border: 4px solid @orange;
+    &:active {
+      background-color: @blue;
+    }
   }
 
   .game:nth-child(4n + 1) {
     background-color: @green;
+    border: 4px solid @green;
+    &:active {
+      background-color: @blue;
+    }
   }
 
   .game:nth-child(4n + 2) {
     background-color: @yellow;
+    border: 4px solid @yellow;
+    &:active {
+      background-color: @blue;
+    }
   }
 
   .game:nth-child(4n + 3) {
     background-color: @red;
+    border: 4px solid @red;
+    &:active {
+      background-color: @blue;
+    }
   }
 }
