--- a/assets/src/Menu/styles.less
+++ b/assets/src/Menu/styles.less
@@ -32,12 +32,12 @@
 .menuIcon {
   display: flex;
   align-items: center;
-  height: 100%;
+  height: 10vh;
 
   a {
   display: flex;
   flex-direction: column;
-  height: 70%;
+  height: 8vh;
   justify-content: space-around;
 
     div {
